--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
                 <div class="window__content">
                     <div class="profile">
-                        <img src="https://via.placeholder.com/120" alt="Foto de perfil" class="profile__image">
+                        <img src="assets/img/profile.jpeg" alt="Foto de perfil" class="profile__image">
                         <h3 class="profile__name">Alonso Soto</h3>
                         <p class="profile__title">Desarrollador Frontend</p>
                     </div>
